# fastapi_do_zero

./: .gitignore  pyproject.toml
fastapi_do_zero/: app.py  models.py  security.py
fastapi_do_zero/routes/: auth.py  users.py
migrations/: env.py
migrations/versions/: 2b634be62a9c_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
